# perfect-pitch

./: .gitignore  CMakeLists.txt  keyboard.cpp  keyboard.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  synth.cpp  synth.h
